syntax = "proto3";

package api.proto.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/msharbaji/grpc-go-example/pkg/pb";

message User {

    string id = 1;
    string username = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message Users {
    repeated User users = 1;
}

message CreateUserRequest {
    string username = 1;
    string email = 2;
}

message GetUserRequest {
    optional string id = 1;
    optional string username = 2;
    optional string email = 3;
}

message UpdateUserRequest {
    optional string username = 2;
    optional string email = 3;
}

message ListUsersRequest {
     google.protobuf.Empty empty = 1;
}

message CreateUserResponse {
    optional User user = 1;
}

message GetUserResponse {
    optional User user = 1;
}

message UpdateUserResponse {
    optional User user = 1;
}

message DeleteUserResponse {
    optional User user = 1;
}

message ListUsersResponse {
    repeated User users = 1;
}

message DeleteUserRequest {
    optional string id = 1;
    optional string username = 2;
    optional string email = 3;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc ListUsers(google.protobuf.Empty) returns (ListUsersResponse);
}




